--- a/res/layout/swipable_image.xml
+++ b/res/layout/swipable_image.xml
@@ -3,11 +3,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <net.frakbot.imageviewex.ImageViewNext
-        android:id="@+id/image"
+    <RelativeLayout
+        android:id="@+id/images_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="match_parent" >
+
+        <net.frakbot.imageviewex.ImageViewNext
+            android:id="@+id/gif"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:adjustViewBounds="true" />
+
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:adjustViewBounds="true" />
+    </RelativeLayout>
+
+    <ProgressBar
+        android:id="@+id/progress"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:adjustViewBounds="true" />
+        android:visibility="gone" />
 
 </RelativeLayout>
