--- a/res/layout/swipable_image.xml
+++ b/res/layout/swipable_image.xml
@@ -10,15 +10,15 @@
 
         <net.frakbot.imageviewex.ImageViewNext
             android:id="@+id/gif"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_centerInParent="true"
             android:adjustViewBounds="true" />
 
         <ImageView
             android:id="@+id/image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_centerInParent="true"
             android:adjustViewBounds="true" />
     </RelativeLayout>
@@ -28,7 +28,6 @@
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:visibility="gone" />
+        android:layout_centerInParent="true" />
 
 </RelativeLayout>
