--- a/res/layout/swipable_image.xml
+++ b/res/layout/swipable_image.xml
@@ -19,7 +19,7 @@
         android:background="@color/transparent"
         android:visibility="gone" />
 
-    <ImageView
+    <uk.co.senab.photoview.PhotoView
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
