Channel selection list with annotations

--- a/res/layout/activity_channel_selection.xml
+++ b/res/layout/activity_channel_selection.xml
@@ -8,6 +8,13 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
+
+        <ListView
+            android:id="@+id/channelList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+        </ListView>
+
     </RelativeLayout>
 
     <!-- The navigation drawer -->
