--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
      <color name="transparent">#00000000</color>
      <color name="black">#000000</color>
+     <color name="translucent_black">#44000000</color>
 </resources>
