--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -4,4 +4,5 @@
      <color name="black">#000000</color>
      <color name="translucent_black">#44000000</color>
      <color name="white">#ffffff</color>
+     <color name="actionBar">#37B6CE</color>
 </resources>
