--- a/res/menu/channel_selection.xml
+++ b/res/menu/channel_selection.xml
@@ -2,7 +2,7 @@
     xmlns:lyricoo="http://schemas.android.com/apk/res-auto">
 
     <item android:id="@+id/action_new_channel"
-          android:icon="@drawable/ic_action_new"
+          android:icon="@drawable/ic_action_new_channel"
           lyricoo:showAsAction="always"
           android:title="@string/action_new_channel"/>
 
