--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -4,5 +4,6 @@
      <color name="black">#000000</color>
      <color name="translucent_black">#44000000</color>
      <color name="white">#ffffff</color>
-     <color name="actionBar">#4577D4</color>
+     <color name="actionBar">#f2f2f2</color>
+     <color name="actionBarText">#4c4c4c</color>
 </resources>
