--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -35,11 +35,11 @@
 
     <!-- ActionBar styles -->
     <style name="PicdoraActionBar" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
-        <item name="android:background">@color/actionBar</item>
+        <item name="android:background">@color/action_bar_background</item>
 
         <!-- Support library compatibility -->
         <item name="titleTextStyle">@style/TitleTextStyle</item>
-        <item name="background">@color/actionBar</item>
+        <item name="background">@color/action_bar_background</item>
     </style>
 
     <!-- action bar title text -->
