--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -27,14 +27,14 @@
         <item name="android:windowExitAnimation">@android:anim/fade_out</item>
     </style>
     
-    <style name="PicdoraActionBarTheme" parent="@style/Theme.AppCompat.Light.DarkActionBar">
+    <style name="PicdoraActionBarTheme" parent="@style/Theme.AppCompat.Light">
 
         <!-- Support library compatibility -->
         <item name="actionBarStyle">@style/PicdoraActionBar</item>
     </style>
 
     <!-- ActionBar styles -->
-    <style name="PicdoraActionBar" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
+    <style name="PicdoraActionBar" parent="@style/Widget.AppCompat.Light.ActionBar">
         <item name="android:background">@color/action_bar_background</item>
 
         <!-- Support library compatibility -->
