--- a/res/layout/fragment_swipable_image.xml
+++ b/res/layout/fragment_swipable_image.xml
@@ -28,6 +28,18 @@
             android:textSize="20dp" />
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/deletedText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:background="@color/transparent"
+        android:gravity="center"
+        android:text="Image Deleted"
+        android:textColor="@color/white"
+        android:visibility="gone"
+        android:textSize="20sp" />
+
     <uk.co.senab.photoview.PhotoView
         android:id="@+id/image"
         android:layout_width="match_parent"
