--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
      <color name="transparent">#00000000</color>
      <color name="black">#000000</color>
+     <color name="red">#ff0000</color>
      <color name="translucent_black">#44000000</color>
      <color name="white">#ffffff</color>
      <color name="action_bar_background">#f2f2f2</color>
@@ -10,4 +11,7 @@
      <color name="drawerBackground">#f2f2f2</color>
      <color name="drawerDivider">#a8a8a8</color>
      <color name="drawerText">#000000</color>
+     <color name="channel_grid_item_text_background">#60000000</color>
+     <color name="channel_grid_item_text_color">#ffffff</color>
+     
 </resources>
