--- a/res/layout/activity_channel_creation.xml
+++ b/res/layout/activity_channel_creation.xml
@@ -1,110 +1,20 @@
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/drawer_layout"
+<?xml version="1.0" encoding="UTF-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <!-- The main content view -->
-
-    <RelativeLayout
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        android:layout_above="@+id/createButton"
+        android:layout_alignParentTop="true" />
 
-        <TextView
-            android:id="@+id/nameLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:textSize="20sp"
-            android:text="Channel Name" />
+    <Button
+        android:id="@+id/createButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:text="Create" />
 
-        <EditText
-            android:id="@+id/channelName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/nameLabel"
-            android:layout_marginLeft="20dp"
-            android:singleLine="true"
-            android:imeOptions="actionDone"
-            android:hint="My New Channel"
-            android:ems="10" />
-
-        <TextView
-            android:id="@+id/gifLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/channelName"
-            android:layout_margin="10dp"
-            android:textSize="20sp"
-            android:text="Show Gifs?" />
-
-        <RadioGroup
-            android:id="@+id/gifSetting"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/gifLabel"
-            android:layout_marginLeft="20dp"
-            android:checkedButton="@+id/gif_allowed"
-            android:orientation="horizontal" >
-
-            <RadioButton
-                android:id="@+id/gif_none"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="No" />
-
-            <RadioButton
-                android:id="@+id/gif_allowed"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Yes" />
-
-            <RadioButton
-                android:id="@+id/gif_only"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Exclusively!" />
-        </RadioGroup>
-
-        <TextView
-            android:id="@+id/categoryLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/gifSetting"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="10dp"
-            android:textSize="20sp"
-            android:text="Categories" />
-
-        <ListView
-            android:id="@+id/categoryList"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/createButton"
-            android:layout_below="@+id/categoryLabel"
-            android:layout_marginTop="20dp" >
-        </ListView>
-
-        <Button
-            android:id="@+id/createButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:text="Create Channel!" />
-    </RelativeLayout>
-
-    <!-- The navigation drawer -->
-
-    <include
-        android:id="@+id/sliding_menu_list"
-        layout="@layout/sliding_menu" >
-    </include>
-
-</android.support.v4.widget.DrawerLayout>
+</RelativeLayout>
