--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -5,6 +5,8 @@
      <color name="red">#ff0000</color>
      <color name="translucent_black">#44000000</color>
      <color name="white">#ffffff</color>
+     <color name="buttonLightBlue">#1cb0f6</color>
+     <color name="buttonDarkBlue">#0c82b9</color>
      <color name="action_bar_background">#f2f2f2</color>
      <color name="actionBarText">#4c4c4c</color>
      <color name="activityBackground">#ffffff</color>
