nsfw preference for showing nsfw selection on channel creation

--- a/res/layout/fragment_channel_info.xml
+++ b/res/layout/fragment_channel_info.xml
@@ -33,90 +33,97 @@
             android:imeOptions="actionDone"
             android:singleLine="true" />
 
-        <TextView
-            android:id="@+id/gifLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/channelName"
-            android:layout_margin="10dp"
-            android:text="Show Gifs?"
-            android:textSize="20sp" />
-
-        <RadioGroup
-            android:id="@+id/gifSetting"
+        <RelativeLayout
+            android:id="@+id/radioGroups"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/gifLabel"
-            android:layout_marginLeft="20dp"
-            android:checkedButton="@+id/gif_allowed"
-            android:orientation="horizontal" >
+            android:layout_below="@+id/channelName" >
 
-            <RadioButton
-                android:id="@+id/gif_none"
+            <TextView
+                android:id="@+id/gifLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="No" />
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_margin="10dp"
+                android:text="Show Gifs?"
+                android:textSize="20sp" />
 
-            <RadioButton
-                android:id="@+id/gif_allowed"
+            <RadioGroup
+                android:id="@+id/gifSetting"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_below="@+id/gifLabel"
+                android:layout_marginLeft="20dp"
+                android:checkedButton="@+id/gif_allowed"
+                android:orientation="horizontal" >
+
+                <RadioButton
+                    android:id="@+id/gif_none"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="No" />
+
+                <RadioButton
+                    android:id="@+id/gif_allowed"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Yes" />
+
+                <RadioButton
+                    android:id="@+id/gif_only"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Exclusively!" />
+            </RadioGroup>
+
+            <TextView
+                android:id="@+id/nsfwLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Yes" />
+                android:layout_alignParentLeft="true"
+                android:layout_below="@+id/gifSetting"
+                android:layout_margin="10dp"
+                android:text="Show NSFW?"
+                android:textSize="20sp" />
 
-            <RadioButton
-                android:id="@+id/gif_only"
-                android:layout_width="wrap_content"
+            <RadioGroup
+                android:id="@+id/nsfwSetting"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Exclusively!" />
-        </RadioGroup>
+                android:layout_alignParentLeft="true"
+                android:layout_below="@+id/nsfwLabel"
+                android:layout_marginLeft="20dp"
+                android:checkedButton="@+id/nsfw_no"
+                android:orientation="horizontal" >
 
-        <TextView
-            android:id="@+id/nsfwLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/gifSetting"
-            android:layout_margin="10dp"
-            android:text="Show NSFW?"
-            android:textSize="20sp" />
+                <RadioButton
+                    android:id="@+id/nsfw_yes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Yes" />
 
-        <RadioGroup
-            android:id="@+id/nsfwSetting"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/nsfwLabel"
-            android:layout_marginLeft="20dp"
-            android:checkedButton="@+id/nsfw_no"
-            android:orientation="horizontal" >
-
-            <RadioButton
-                android:id="@+id/nsfw_yes"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Yes" />
-
-            <RadioButton
-                android:id="@+id/nsfw_no"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="No" />
-        </RadioGroup>
+                <RadioButton
+                    android:id="@+id/nsfw_no"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="No" />
+            </RadioGroup>
+        </RelativeLayout>
 
         <Button
             android:id="@+id/nextButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/nsfwSetting"
-            android:background="@drawable/next_button"
+            android:layout_below="@+id/radioGroups"
             android:layout_margin="20dp"
-            android:padding="10dp"
+            android:background="@drawable/next_button"
             android:gravity="center"
-            android:textSize="20sp"
+            android:padding="10dp"
+            android:text="Choose Categories"
             android:textColor="@color/white"
-            android:text="Choose Categories" />
+            android:textSize="20sp" />
     </RelativeLayout>
 
 </ScrollView>
