--- a/res/layout/activity_channel_creation.xml
+++ b/res/layout/activity_channel_creation.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="@color/activityBackground" >
 
-    <android.support.v4.view.ViewPager
+    <com.picdora.channelCreation.ChannelCreationViewPager
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
