--- a/res/layout/fragment_category_selection.xml
+++ b/res/layout/fragment_category_selection.xml
@@ -24,25 +24,30 @@
             android:id="@+id/previewButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             android:layout_weight="1"
             android:background="@drawable/orange_button"
             android:text="Preview"
             android:textColor="@color/white" />
 
-        <TextView
-            android:id="@+id/numImages"
+        <Button
+            android:id="@+id/clearButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             android:layout_weight="1"
-            android:gravity="center"
-            android:padding="8dp"
-            android:text="0 images"
+            android:background="@drawable/black_button"
+            android:text="Clear"
             android:textColor="@color/white" />
 
         <Button
             android:id="@+id/createButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             android:layout_weight="1"
             android:background="@drawable/blue_button"
             android:text="Create"
