--- a/res/layout/image_grid.xml
+++ b/res/layout/image_grid.xml
@@ -4,9 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:columnWidth="@dimen/channel_grid_column_width"
+    android:columnWidth="@dimen/image_grid_column_width"
     android:gravity="center"
-    android:horizontalSpacing="1dp"
+    android:horizontalSpacing="@dimen/image_grid_item_padding"
     android:numColumns="auto_fit"
     android:stretchMode="columnWidth"
-    android:verticalSpacing="1dp" />
+    android:verticalSpacing="@dimen/image_grid_item_padding"
+    android:padding="@dimen/image_grid_item_padding" />
