Add action items to detail view. Add delete channel

--- a/res/menu/channel_selection.xml
+++ b/res/menu/channel_selection.xml
@@ -1,9 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" 
-    xmlns:lyricoo="http://schemas.android.com/apk/res-auto">
+    xmlns:picdora="http://schemas.android.com/apk/res-auto">
 
     <item android:id="@+id/action_new_channel"
           android:icon="@drawable/ic_action_new_channel"
-          lyricoo:showAsAction="always"
+          picdora:showAsAction="always"
           android:title="@string/action_new_channel"/>
 
 
